# term

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bugs.md  terminal-emulator-design.md
src/: app.rs  config.rs  connection.rs  grid.rs  input.rs  main.rs  manager.rs  parser.rs  pty.rs  render.rs  theme.rs  window.rs
